AH-2002-04-29-0: Enhancem.  make maxujobs limitation work SGE and SGEEE mode

AH-2002-04-26-0: Bugfix:    - queue nsuspend > 1 was not used to suspend
                              multiple jobs in a queue at a time in case of a
                              suspend threshold alarm.
                 Issue:     #239
                 Bugtraq:   #4675410
                            - use of suspend thresholds and user sort policy
                              could cause "inconsistent access tree data" schedd
                              logging and break user sort policy
                 Issue:     #240
                 Bugtraq:   #4675416
                 Changed:   sge_schedd

CR-2002-04-25-1: Testsuite: - access_list test:
                              -> submit jobs with 30 sec instead of 15 secs
                                 due to evtl. timeout problems
                            - path_alias test:
                              -> using tcl command dirname to resolve the
                                 directory path due evtl. double existing
                                 path slashes


CR-2002-04-25-0: Testsuite: - checking compile hosts on setup
                            - project_access_lists test: 
                              -> do not wait for jobs with negative job id!
                            - remote_procedures.tcl:
                              -> return without spawn_id if host is not
                                 reachable or if shell can't be started!
                            - sge_procedures.tcl:
                              do a qconf -tsm before getting schedd info
                            

CR-2002-04-24-0: Testsuite: - creating CHECK_PRODUCT_ROOT directory if it
                              is not existing on setup()
                            - procedure gethostname -> try to get hostname
                              from a local installed hostname call or from